Fix item edit page dark mode

--- a/src/main/resources/org/gamelog/Styles/Edit_Item_Page_css/EditItemPage.css
+++ b/src/main/resources/org/gamelog/Styles/Edit_Item_Page_css/EditItemPage.css
@@ -51,3 +51,7 @@
     -fx-font-size: 14px;
     -fx-padding: 2px 0;
 }
+
+.check-box:hover .box {
+    -fx-cursor: hand;
+}
